# model-viewer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  rex.mtl
cmd/: CMakeLists.txt  main.c
models/: rex.mtl
viewer/: CMakeLists.txt  shader.frag  shader.vert  viewer.c  viewer.h
